flux/apps/smart-home/homeassistant/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: homeassistant
  serviceName: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: docker.io/homeassistant/home-assistant:2026.10.0 # {"$imagepolicy": "flux-system:homeassistant-policy"}
          ports:
            - containerPort: 8123
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 8Gi
              cpu: 1000m
      hostNetwork: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant-config
        - name: media
          persistentVolumeClaim:
            claimName: homeassistant-media
