flux/apps/smart-home/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  homeassistant
  namespace: homeassistant
spec:
  selector:
    app:  homeassistant
  type: ClusterIP
  ports:
    - name:  http
      port:  8123
      protocol: TCP 
      targetPort: 8123
