flux/apps/smart-home/homeassistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - homeassistant.${GLOBAL_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homeassistant
      port: 8123
